# lumberjack

./: .gitignore  CMakeLists.txt  Forest.cpp  Forest.h  Solution.cpp  Solution.h  Tree.cpp  Tree.h  oi.h
generator/: Constants.cpp  Constants.h  Crossing.cpp  Crossing.h  Forest.cpp  Forest.h  ForestGenerator.cpp  ForestGenerator.h  Position.h  Tree.cpp  Tree.h  TreeLine.cpp  TreeLine.h  generator.cpp
judges/: judge.cpp
solutions/: abc.cpp  annealing_2.cpp  annealing_3.cpp  annealing_4.cpp  backpack_cpu.cpp  greedy_cpu.cpp  greedy_cpu_2.cpp  greedy_cpu_3.cpp  greedy_cpu_5.cpp  krzysiek_ant_cpu.cpp  lumberjack_annealing.cpp  lumberjack_ant_cpu.cpp  maciej_ant_cpu.cpp  tabu_search.cpp
solutions/cpu/: annealing_2.cpp  annealing_4.cpp  antCPU.cpp  greedy_cpu_2.cpp  greedy_cpu_4.cpp  lumberjack_annealing.cpp  maciej_ant_cpu.cpp  minmaxCPU.cpp  tabu_search_2.cpp
solutions/gpu/: KernelAPI.h  Structs.h  kernel.cu  main.cpp
tests/: l00.out  lumberjack00.in  lumberjack00.out  lumberjack01.in  lumberjack02.in  lumberjack03.in  lumberjack04.in  lumberjack05.in  lumberjack06.in  lumberjack07.in  lumberjack08.in  lumberjack09.in  lumberjack10.in  lumberjack11.in  lumberjack12.in  lumberjack13.in  lumberjack14.in  lumberjack15.in  lumberjack16.in  lumberjack17.in  lumberjack18.in  lumberjack19.in  lumberjack20.in  lumberjack21.in  lumberjack22.in  lumberjack23.in  lumberjack24.in  lumberjack25.in  lumberjack26.in  lumberjack27.in  lumberjack28.in  lumberjack29.in  lumberjack30.in
tests/new/: lumberjack01.in  lumberjack02.in  lumberjack03.in  lumberjack04.in  lumberjack05.in  lumberjack06.in  lumberjack07.in  lumberjack08.in  lumberjack09.in  lumberjack10.in  lumberjack11.in  lumberjack12.in  lumberjack13.in  lumberjack14.in  lumberjack15.in  lumberjack16.in  lumberjack17.in  lumberjack18.in  lumberjack19.in  lumberjack20.in  lumberjack21.in  lumberjack22.in  (+8 more)
(+4 files in other folders)
