cmake_minimum_required(VERSION 3.6)
project(Lumberjack)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES Tree.cpp Tree.h Forest.cpp Forest.h)

set(SOURCE_ANNEALING solutions/cpu/lumberjack_annealing.cpp Solution.cpp Solution.h)
add_executable(judge_easy judges/judge.cpp oi.h ${SOURCE_FILES})
add_executable(solution_annealing ${SOURCE_FILES} ${SOURCE_ANNEALING})
add_executable(maciej_ant solutions/cpu/maciej_ant_cpu.cpp)
add_executable(krzysiek_ant solutions/cpu/krzysiek_ant_cpu.cpp)
add_executable(greedy_cpu solutions/cpu/greedy_cpu.cpp)
add_executable(greedy_cpu_2 solutions/cpu/greedy_cpu_2.cpp)
add_executable(greedy_cpu_3 solutions/cpu/greedy_cpu_3.cpp)
add_executable(greedy_cpu_4 solutions/cpu/greedy_cpu_4.cpp)
add_executable(greedy_cpu_5 solutions/cpu/greedy_cpu_5.cpp)
add_executable(annealing_2 solutions/cpu/annealing_2.cpp)
add_executable(annealing_3 solutions/cpu/annealing_3.cpp)
add_executable(annealing_4 solutions/cpu/annealing_4.cpp)
add_executable(tabu_search solutions/cpu/tabu_search.cpp)
add_executable(tabu_search_2 solutions/cpu/tabu_search_2.cpp)
add_executable(abc solutions/cpu/abc.cpp)